- run.sh 启动示例加入 JVM 优化