@@ -1,4 +1,4 @@
-@echo off
+@echo on
 rem "配置控制台显示中文（防止乱码）"
 chcp 65001
 rem "可以显示当前运行的 bat 位置到黑窗口上面，方便后续找到运行的 jar 包的位置"
@@ -8,7 +8,7 @@ set java=env\win\jdk-17.0.5\bin\java.exe
 rem "打包好后的jar包名，每个服务的 jar 包名不一样"
 set jar=%1
 for /f "tokens=1-5" %%i in ('env\win\jdk-17.0.5\bin\jps ^|findstr "%jar%"') do (
-    echo kill the process %%i who use the port 
+    echo kill the process %%i who use the port
     taskkill /pid %%i -t -f
     goto start
 )
@@ -21,7 +21,17 @@ set vm=-Dfile.encoding=utf-8 ^
 --add-opens java.base/java.lang=ALL-UNNAMED ^
 --add-opens java.base/java.lang.reflect=ALL-UNNAMED ^
 --add-opens java.base/java.lang.invoke=ALL-UNNAMED ^
---add-opens java.base/java.lang.io=ALL-UNNAMED
+--add-opens java.base/java.lang.io=ALL-UNNAMED ^
+-Xms8g -Xmx8g ^
+-XX:MaxMetaspaceSize=512m ^
+-XX:+UseZGC ^
+-XX:MaxGCPauseMillis=150 ^
+-XX:ReservedCodeCacheSize=256m ^
+-XX:+UseCodeCacheFlushing ^
+-Xlog:gc*,gc+age=trace,safepoint:file=gc.log:time,uptime,level,tags:filecount=10,filesize=10M ^
+-XX:+HeapDumpOnOutOfMemoryError ^
+-XX:HeapDumpPath=./java_pid%p.hprof ^
+-XX:NativeMemoryTracking=detail
 rem "配置 Jar 包参数"
 set params=--spring.profiles.active=test ^
 --spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848 ^
